# bat_bot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  copy_bot.bat  readme.md  readme_ai.md
docs/: DESIGN.md
src/: main.cpp
src/app/: application.cpp  application.h
src/archive/: archive_extractor.cpp  archive_extractor.h  archive_reader.cpp  archive_reader.h
src/core/: constants.h  context.h  errors.h  types.h
src/fs/: path_utils.cpp  path_utils.h  target_resolver.cpp  target_resolver.h
src/io/: config_store.cpp  config_store.h  logger.cpp  logger.h  text_io.cpp  text_io.h
src/postprocess/: post_processor.cpp  post_processor.h
src/ui/: console_ui.cpp  console_ui.h  dialogs.cpp  dialogs.h
src/win/: console.cpp  console.h  encoding.cpp  encoding.h
